トップページの写真追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,20 +9,8 @@
 </head>
 
 </body>
-    <header>   
-        <div>
-            <a class='home' href="{{url_for('upload_file')}}">
-                リセット
-            </a>
-            <a class='variety' href="{{url_for('c_type')}}" onClick="window.open('./templates/c_type.html','windowname','scrollbars=yes,width=550,height=450'); return false;">
-            識別できるYOGAのポーズ    
-            </a>
-        </div>
-    </header>
-
-
-    <div class='main'> 
-        <img class="title" src="./static/pic/top_img.jpg">
+        <div class='main'> 
+        <img class="title" src="./static/pic/vHnVtLK8rCc.jpg">
 
         <h2> AIがYOGAのポーズをお答えします</h2>
         <p class='img_send'>画像を送信してください</p>
